Fix alignment in hbs files

--- a/app/templates/user-login.hbs
+++ b/app/templates/user-login.hbs
@@ -1,3 +1,11 @@
+<div class="pull-left">
+	Admin Login<br>
+		admin name : katz<br>
+		password   : pass<hr>
+	user Login:<br>
+		user name : Rhett<br>
+		password  : pass
+</div>
 <div class="container col-sm-3 center">
 	<h2>
 		User Registration
@@ -8,9 +16,9 @@
 		</h2>
       		{{input class="form-control" type="text" placeholder="Your name" value=name }}<br><br>
       		{{input class="form-control" type="password" placeholder="password" value=password }}<br><br>
-          {{#bs-button type="primary" clicked="validateLoginDetails" class="pull-right"}}
-	          Login
-          {{/bs-button}}
+          	{{#bs-button type="primary" clicked="validateLoginDetails" class="pull-right"}}
+	        	Login
+          	{{/bs-button}}
     	</div>
 </div>
 
