--- a/app/templates/edit-user.hbs
+++ b/app/templates/edit-user.hbs
@@ -2,14 +2,14 @@
 	<div class="panel panel-info">
 		<div class="panel-heading">
 			<label {{action "editUser" model on="doubleClick"}}>
-				<h3 class="panel-title">Edit {{model.name}} Details</h3>
+				<h3 class="panel-title">Edit {{name}} Details</h3>
 			</label>
 		</div>
 		<div class="panel-body">
 			<div class="row">
 				<div class="col-md-3 col-lg-3 " align="center">
-        				{{#if model.profileImage}}
-						<img alt="User Pic" {{bind-attr src=model.profileImage}} class="img-circle" height="100" width="100">
+        				{{#if profileImage}}
+						<img alt="User Pic" {{bind-attr src=profileImage}} class="img-circle" height="100" width="100">
         				{{else}}
 	        				<img alt="User Pic" {{bind-attr src=defaultImage}} class="img-circle" height="100" width="100">
         				{{/if}}
@@ -22,7 +22,7 @@
 									Name:
 								</td>
 								<td>
-                							{{input type="text" class= "form-control danger" value=model.name }}
+                							{{input type="text" class= "form-control danger" value=name }}
               							</td>
 							</tr>
 			      				<tr>
@@ -30,7 +30,7 @@
 									Age:
 								</td>
 				      				<td>
-                							{{input type="text" class= "form-control" value=model.age }}
+                							{{input type="text" class= "form-control" value=age }}
               							</td>
 			      				</tr>
 							<tr>
@@ -38,14 +38,14 @@
 									Github URL
 								</td>
 								<td>
-                							{{input type="text" class= "form-control" value=model.githubURL }}
+                							{{input type="text" class= "form-control" value=githubURL }}
 								</td>
 							</tr>
 							<tr>
 								<td>
 									Phone No
 								</td>
-								<td>{{input type="text" class= "form-control" value=model.phoneNo }}</td>
+								<td>{{input type="text" class= "form-control" value=phoneNo }}</td>
 							</tr>
 						</tbody>
 					</table>
